/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.set.v1;

import "atomix/runtime/v1/descriptor.proto";
import "atomix/runtime/v1/primitive.proto";
import "gogoproto/gogo.proto";

// SetManager is a manager for a Set primitive
service SetManager {
    option (atomix.runtime.v1.name) = "Set";
    option (atomix.runtime.v1.component) = MANAGER;

    rpc Create (CreateRequest) returns (CreateResponse) {
        option (atomix.runtime.v1.operation_id) = 1;
        option (atomix.runtime.v1.operation_type) = CREATE;
    }

    rpc Close (CloseRequest) returns (CloseResponse) {
        option (atomix.runtime.v1.operation_id) = 2;
        option (atomix.runtime.v1.operation_type) = CLOSE;
    }
}

message CreateRequest {
    atomix.runtime.v1.Primitive primitive = 1 [
        (gogoproto.nullable) = false
    ];
}

message CreateResponse {

}

message CloseRequest {
    atomix.runtime.v1.PrimitiveId primitive_id = 1 [
        (gogoproto.customname) = "PrimitiveID",
        (gogoproto.nullable) = false
    ];
}

message CloseResponse {

}
